# jni-gwt-test

./: .gitignore  build.gradle
core/src/: JniGwtTest.gwt.xml
core/src/net/josid/gdx/jnigwttest/: JniGwtTest.java
desktop/: build.gradle
desktop/src/net/josid/gdx/jnigwttest/desktop/: DesktopLauncher.java
desktop/src/net/josid/gdx/jnigwttest/desktop/jni/: GdxTransformBuilder.java
html/: build.gradle
html/src/net/josid/gdx/jnigwttest/: GdxDefinition.gwt.xml  GdxDefinitionSuperdev.gwt.xml
html/src/net/josid/gdx/jnigwttest/client/: HtmlLauncher.java
html/webapp/: index.html
jni/: CMakeLists.txt  libchipmunk.js
jni/gdx/include/gdx/: transform.h
jni/gdx/src/: transform.c
